# VelociVortex

./: .gitignore  requirements.txt
CodeFusion/: TODO  manage.py  pyproject.toml  settings.py  urls.py
CodeFusion/CodeFusion/: asgi.py  settings.py  urls.py  wsgi.py
CodeFusion/authentication/: views.py
authentication/: serializers.py  urls.py  views.py
update/: admin.py  models.py  serializers.py  urls.py  validation.py  views.py
update/migrations/: 0001_initial.py  0002_workhistory_title.py  0003_userprofile_current_title.py  0004_auto_20231124_1343.py  0005_auto_20231124_1643.py  0006_auto_20231126_1351.py  0007_auto_20231127_1701.py  0008_auto_20231128_1714.py
